Added Docker build files.